{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "b93a7e86-629a-47fb-ade2-c3cb8cb3589d",
            "actions": [
                {
                    "name": "MenuOpenClose",
                    "type": "Button",
                    "id": "65d5aed5-b2ab-40de-b024-78d6897850d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuestMenuOpenClose",
                    "type": "Button",
                    "id": "f995386b-bf89-4058-9b60-ba290de1b627",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef89cec5-39ef-4cdf-b80c-2e06fdf0faf5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MenuOpenClose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc011b41-29a6-4de9-855c-068359de606d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "QuestMenuOpenClose",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}